<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:orientation="vertical" >

    <ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1">
	    <LinearLayout
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		<include
		   	android:id="@+id/frontpanellayout"
	   		layout= "@layout/frontview" />
		</LinearLayout>
	</ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btnStop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text= "@string/caption_button_stop" />

        <Button
            android:id="@+id/btnReload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/caption_button_reload" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text= "@string/caption_button_start" />
    </LinearLayout>

</LinearLayout>